--- a/resume.EN.html
+++ b/resume.EN.html
@@ -155,7 +155,7 @@ Micrograph, Origin, CIE, <br>&emsp;  ChemBioOffice, Jade, XPS Peakfit, Endnote, 
 <font size='4';><b>Research Experience:</b></font>
 </div>
 
-<div id='content' style='height:auto;width:1000px;float:left;line-height:170%;'>
+<div id='content' style='height:3000px;width:1000px;float:left;line-height:170%;'>
 ☆&nbsp; Monodisperse, water-dispersible BaYF<sub>5</sub>:Ln<sup>3+</sup> nanospheres and nanoflowers were synthesized via microwave-assisted <br>&nbsp;  &emsp;modified polyol process. The obtained NCs with excellent up-down luminescent property and X-ray absorption property have <br>&nbsp;  &emsp;great potential as optical/CT bioprobe (<b>Inorg. Chem. Commun.</b> 2015, 62, 11-4).
 <a href="http://www.sciencedirect.com/science/article/pii/S1387700315301155">link</a><br><br>
 &nbsp;  &emsp;&nbsp;  &emsp;
