--- a/resume.EN.html
+++ b/resume.EN.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
 <meta charset='utf-8'>
@@ -15,7 +14,7 @@ p
 <div id="container" style='width:900px;padding:10; font-size: 120%;margin:0 auto;font-family:"Times New Roman"'>
 <br>
 
-<div style='width:20%;float:right;'>
+<div style='width:80px;float:right;'>
 <a href="resume.CN.html">简体中文</a><br>
 </div>
 
