--- a/resume.EN.html
+++ b/resume.EN.html
@@ -8,7 +8,7 @@ p
 }
 
 ul li{font-size:97%; font-family:"Times New Roman";line-height:170%;}
-ol li{font-size:96%; font-family:"Times New Roman";line-height:170%;}
+ol li{font-size:95%; font-family:"Times New Roman";line-height:170%;}
 
 </style>
 </head>
@@ -21,7 +21,7 @@ ol li{font-size:96%; font-family:"Times New Roman";line-height:170%;}
 <a href="resume.CN.html">简体中文</a><br>
 </div>
 
-<div id='header' style='height:30px;>
+<div id='header' style='height:auto;line-height:200%;'>
 <br>
 <font size='4';><b>Personal information:</b></font>
 </div>
@@ -37,29 +37,30 @@ ol li{font-size:96%; font-family:"Times New Roman";line-height:170%;}
 <img src="xx.jpg" height="200px" width="150px">
 </div>
 
-<div id='content' style='height:120px;width:700px;float:left;line-height:170%;'>
+<div id='content' style='height:auto;width:700px;float:left;line-height:150%;'>
 <b>Place and Date of Birth:</b> Yulin, P. R. China | May 13th 1991<br>
 <b>Address:</b> State Key Laboratory of Inorganic Synthesis and Preparative Chemistry B626, Jilin University, Changchun 130012, P. R. China.<br>
 </div>
 
 
-<div id="content" style='height:30px;width:800px;float:left;'>
+<div id="content" style='height:auto;width:800px;float:left;line-height:200%;'>
+<br>
 <font size='4';><b>Education:</b></font>
 </div>
 
 
-<div id='content' style='height:auto;width:1000px;float:left;float:left;line-height:170%;'>
-09/2009 – 06/2013 &emsp;B.S. in Chemistry of Materials <br>
-						College of Chemistry, Jilin University, P. R. China<br></br>
-09/2013 – Present     &emsp;     PhD Candidate in Inorganic Chemistry, Supervisor: Prof. Zhan Shi <br>
+<div id='content' style='height:auto;width:1000px;float:left;float:left;line-height:150%;'>
+09/2009 – 06/2013: &emsp;B.S. in Chemistry of Materials <br>
+College of Chemistry, Jilin University, P. R. China<br></br>
+
+09/2013 – Present: &emsp;PhD Candidate in Inorganic Chemistry, Supervisor: Prof. Zhan Shi <br>
 						State Key Laboratory of Inorganic Synthesis and Preparative Chemistry, Jilin University, P. R. China.<br> </br>
-05/2016 – 08/2016 &emsp;Visiting student, Supervisor: Prof. Yu Han <br>
+05/2016 – 08/2016: &emsp;Visiting student, Supervisor: Prof. Yu Han <br>
 					King Abdullah University of Science and Technology, Saudi Arabia.<br></br>
 </div>
 
  
-<div id="content" style='height:30px;width:800px;float:left;'>
-<br>
+<div id="content" style='height:auto;width:800px;float:left;'>
 <font size='4';><b>Honors and Award:</b></font>
 </div>
 
@@ -77,8 +78,7 @@ ol li{font-size:96%; font-family:"Times New Roman";line-height:170%;}
 
 
 
-<div id="content" style='height:30px;width:800px;float:left;'>
-<br>
+<div id="content" style='height:auto;width:800px;float:left;'>
 <font size='4';><b>Research Interest:</b></font>
 </div>
 
@@ -91,14 +91,13 @@ in disease diagnosis and treatment.<br></li>
 </ul>
 </div> 
 
-<div id="content" style='height:30px;width:800px;float:left;'>
-<br>
+<div id="content" style='height:auto;width:800px;float:left;'>
 <font size='4';><b>Skills:</b></font>
 </div>
 
 <div id='content' style='height:auto;width:1000px;float:left;line-height:170%;'>
-<ul>
-<li> I have developed a wide and complementary knowledge of many synthetic techniques such as
+
+<ul><li> I have developed a wide and complementary knowledge of many synthetic techniques such as
 hydrothermal/solvothermal, sol-gel, co-precipitation, thermal decomposition and solid-sate
 synthesis.<br></li>
 <li> I can schematically characterize the structures of nanostructured materials and measure their
@@ -110,8 +109,7 @@ Micrograph, Origin, CIE, ChemBioOffice, Jade, XPS Peakfit, Endnote, PS, 3Ds max 
 </ul>
 </div>
 
-<div id="content" style='height:30px;width:1000px;float:left;'>
-<br>
+<div id="content" style='height:auto;width:1000px;float:left;'>
 <font size='4';><b>Participate in/submit paper to academic conferences:</b></font>
 </div>
 
@@ -125,8 +123,7 @@ Micrograph, Origin, CIE, ChemBioOffice, Jade, XPS Peakfit, Endnote, PS, 3Ds max 
 </div>
 
 
-<div id="content" style='height:30px;width:800px;float:left;'>
-<br>
+<div id="content" style='height:auto;width:800px;float:left;'>
 <font size='4';><b>Publications:</b></font>
 </div>
 
@@ -166,8 +163,7 @@ Micrograph, Origin, CIE, ChemBioOffice, Jade, XPS Peakfit, Endnote, PS, 3Ds max 
 </ol>
 </div>
 
-<div id="content" style='height:30px;width:1000px;float:left;'>
-<br>
+<div id="content" style='height:auto;width:1000px;float:left;'>
 <font size='4';><b>Research Experience:</b></font>
 </div>
 
