--- a/resume.CN.html
+++ b/resume.CN.html
@@ -14,7 +14,7 @@ p
 <div id="container" style='width:1000px;padding:10; margin:0 auto; font-family:"Times New Roman";'>
 <br>
 
-<div style='width:20%;float:right;'>
+<div style='width:50px;float:right;'>
 <a href="resume.EN.html" >English</a><br>
 </div>
 
