--- a/resume.EN.html
+++ b/resume.EN.html
@@ -14,8 +14,8 @@ p
 <div id="container" style='width:900px;padding:10; font-size: 120%;margin:0 auto;font-family:"Times New Roman"'>
 <br>
 
-<div style='width:80px;float:right;'>
-<a href="resume.CN.html">简体中文</a><br>
+<div style='width:55px;float:right;'>
+<a href="resume.CN.html"><font size='2';>简体中文</font></a><br>
 </div>
 
 <div id='header' style='height:30px;>
