--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html>
-<head>
-<meta charset='utf-8' http-equiv="refresh" content="0.1;url=resume.EN.html">
-<title>Resume</title>
-</head>
+<div style='width:55%;float:right;'>
+<a href="index1.html"><font size='2';>简体中文</font></a><br>
+</div>
+
+<img src="1.png">
+<img src="2.png">
+<img src="3.png">
+<img src="4.png">
+<img src="5.png">
+<img src="6.png">
+<img src="7.png">
+
 
 </html>
