--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <html>
-<div style='width:55%;float:right;'>
-<a href="index1.html"><font size='2';>简体中文</font></a><br>
-</div>
+<head>
 
-<img src="1.png">
-<img src="2.png">
-<img src="3.png">
-<img src="4.png">
-<img src="5.png">
-<img src="6.png">
-<img src="7.png">
+<script type="text/javascript">
+var u = navigator.userAgent;
+var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1;
+if (isAndroid){
+    //<meta charset='utf-8' http-equiv="refresh" content="0.1;url=An.EN.html">
+    location.href = "An.EN.html";
+}
+else{
+    location.href = "resume.EN.html";
+	//<meta charset='utf-8' http-equiv="refresh" content="0.1;url=resume.EN.html">
+}
+</script>
 
+<title>Resume</title>
+</head>
 
 </html>
