--- a/resume.EN.html
+++ b/resume.EN.html
@@ -59,7 +59,7 @@ Jilin University, Changchun 130012, P. R. China.
 <font size='4';><b>Honors and Award:</b></font>
 </div>
 
-<div id='content' style='height:250px;width:900px;float:left;line-height:170%;'>
+<div id='content' style='height:285px;width:900px;float:left;line-height:170%;'>
 ☆&nbsp; 2017, National Scholarship for Graduate Students (top 1%) <br>
 ☆&nbsp; 2016, Excellent Graduate Student Award of Jilin University (top 5%)<br>
 ☆&nbsp; 2015-2016, Second Prize of Jilin University Scholarship (top 10%)<br>
@@ -67,6 +67,7 @@ Jilin University, Changchun 130012, P. R. China.
 ☆&nbsp; 2013-2014, Jilin University Basic Scholarship (top 20%)<br>
 ☆&nbsp; 2013, National Scholarship for Graduate Students (top 1%)<br>
 ☆&nbsp; 2017, Second Prize of the 31th Elite Cup of Jilin University<br>
+☆&nbsp; 2017, First Prize of the 10th  Doctoral Academic Forum of Jilin University<br>
 </div>
 
 
@@ -103,11 +104,12 @@ Micrograph, Origin, CIE, <br>&emsp;  ChemBioOffice, Jade, XPS Peakfit, Endnote, 
 <font size='4';><b>Participate in/submit paper to academic conferences:</b></font>
 </div>
 
-<div id='content' style='height:150px;width:1000px;float:left;line-height:170%;'>
+<div id='content' style='height:180px;width:1000px;float:left;line-height:170%;'>
 ☆&nbsp; 6th International Conference on Nanoscience and Technology, September 2015, Beijing<br>
 ☆&nbsp; Horiba Fluorescence Training Course, November 2015, Beijing<br>
 ☆&nbsp; 9th Academic Forum for Doctoral Students of Jilin University, November 2016, Changchun<br>
 ☆&nbsp; 7th International Conference on Nanoscience and Technology, August 2017, Beijing<br>
+☆&nbsp; 10th Academic Forum for Doctoral Students of Jilin University, November 2016, Changchun<br>
 </div>
 
 
@@ -115,7 +117,7 @@ Micrograph, Origin, CIE, <br>&emsp;  ChemBioOffice, Jade, XPS Peakfit, Endnote, 
 <font size='4';><b>Publications:</b></font>
 </div>
 
-<div id='content' style='height:1340px;width:1000px;float:left;line-height:170%;'>
+<div id='content' style='height:1210px;width:1000px;float:left;line-height:170%;'>
 1. &nbsp;	<b>C. Chen</b>; Y.Yu; C. Li*; D. Liu; H. Huang, C. Liang; Y. Lou; Y. Han; Z. Shi*; S. Feng, Facile synthesis of water-soluble t-<br>&nbsp;  &emsp;LaVO<sub>4</sub>:Ln<sup>3+</sup> nanoparticles for anti-fake ink and latent fingermark detection. <b>Small.</b> 2017, Accepted, <br>&nbsp;  &emsp;DOI:10.1002/smll.201702305.<br>
 
 2. &nbsp;	<b>C. Chen</b>; J. Liu; Y. Chen; C. Li*; X. Liu; H. Huang; C. Liang; Y. Lou; Z. Shi; S. Feng, Sub-10 nm <br>&nbsp;  &emsp;Sr<sub>2</sub>LuF<sub>7</sub>:Yb/Er@Sr<sub>2</sub>GdF<sub>7</sub>@SrF<sub>2</sub> up-conversion nanocrystals for up-conversion luminescence-magnetic resonance-computed <br>&nbsp;  &emsp;tomography trimodal bioimaging. <b>ACS Appl. Mater. Interfaces</b> 2017,9(7), 5748-56.<br>
@@ -128,25 +130,21 @@ Micrograph, Origin, CIE, <br>&emsp;  ChemBioOffice, Jade, XPS Peakfit, Endnote, 
 
 6. &nbsp;	<b>C. Chen</b>; C. Li*; L. Zhao; X. Liu; T. Bai; H. Huang; Z. Shi*; S. Feng, A facile synthesis of water-soluble BaYF<sub>5</sub>:Ln<sup>3+</sup> NCs <br>&nbsp;  &emsp;with excellent luminescent properties as promising contrast agent for dual-modal bioimaging. <b>Inorg. Chem. Commun.</b> 2015, <br>&nbsp;  &emsp;62, 11-4. <br>
 
-7. &nbsp;	<b>C. Chen</b>; N. Zhu; C. Li*; C. Liang; Y. Lou; Z. Shi*; S. Feng, A ratiometric fluorescent probe based on upconversion <br>&nbsp;  &emsp;nanoparticles for peroxynitrite sensing through FRET. <b>In preparation.</b><br>
+7. &nbsp;	W. Cheng; <b>C. Chen</b>; Y. Yu; C. Li; L. Gao*; Z. Shi, Facile synthesis of ZIFs-derived hollow bimetal (Zn,Co)S nanocrystals for <br>&nbsp;  &emsp;supercapacitors. <b>Chemical Journal of Chinese Universities</b>, 2017, 38(8), 1303-8.<br>
 
-8. &nbsp;	<b>C. Chen</b>; C. Li*; Z. Shi*; S. Feng, A tumor imaging and therapy platform based on upconversion NaGdF<sub>4</sub>@Cu<sub>(2-x)</sub>S <br>&nbsp;  &emsp;nanoparticles. <b>In preparation.</b><br>
+8. &nbsp;	T. Bai; S. Xing; Y. Lou; <b>C. Chen</b>; H. Huang; C. Li*; Z. Shi*; S. Feng, Colloidal synthesis of quaternary wurtzite Cu<sub>3</sub>AlSnS<sub>5</sub> <br>&nbsp;  &emsp;nanocrystals and their photoresponsive properties. <b>ChemPlusChem</b> 2015, 80 (4), 652-5.<br>
 
-9. &nbsp;	W. Cheng; <b>C. Chen</b>; Y. Yu; C. Li; L. Gao*; Z. Shi, Facile synthesis of ZIFs-derived hollow bimetal (Zn,Co)S nanocrystals for <br>&nbsp;  &emsp;supercapacitors. <b>Chemical Journal of Chinese Universities</b>, 2017, 38(8), 1303-8.<br>
+9. &nbsp;	C. Liang; J. Bao; C. Li; H. Huang; <b>C. Chen</b>; Y. Lou; H. Lu*; H. Lin; Z. Shi*; S. Feng, One-dimensional hierarchically <br>&nbsp;  &emsp;porous carbon from biomass with high capacitance as supercapacitor materials. <b>Micropor. Mesopor. Mat.</b> 2017, 251, 77-82.<br>
 
-10.&nbsp;	T. Bai; S. Xing; Y. Lou; <b>C. Chen</b>; H. Huang; C. Li*; Z. Shi*; S. Feng, Colloidal synthesis of quaternary wurtzite Cu<sub>3</sub>AlSnS<sub>5</sub> <br>&nbsp;  &emsp;nanocrystals and their photoresponsive properties. <b>ChemPlusChem</b> 2015, 80 (4), 652-5.<br>
+10.&nbsp;	D. Ma; B. Li*; Z. Cui; K. Liu; <b>C. Chen</b>; G. Li; J. Hua; B. Ma; Z. Shi*; S. Feng, Multifunctional luminescent porous organic <br>&nbsp;  &emsp;polymer for selectively detecting iron ions and 1,4-dioxane via luminescent turn-off and turn-on sensing. <b>ACS Appl. Mater. <br>&nbsp;  &emsp;Interfaces</b> 2016, 8 (36), 24097-103.<br>
 
-11.&nbsp;	C. Liang; J. Bao; C. Li; H. Huang; <b>C. Chen</b>; Y. Lou; H. Lu*; H. Lin; Z. Shi*; S. Feng, One-dimensional hierarchically <br>&nbsp;  &emsp;porous carbon from biomass with high capacitance as supercapacitor materials. <b>Micropor. Mesopor. Mat.</b> 2017, 251, 77-82.<br>
+11.&nbsp;	Y. Lou; C. Li; X. Gao; T. Bai; <b>C. Chen</b>; H. Huang; C. Liang; Z. Shi*; S. Feng, Porous Pt nanotubes with high methanol <br>&nbsp;  &emsp;oxidation electrocatalytic activity based on original bamboo-Shaped Te nanotubes. <b>ACS Appl. Mater. Interfaces</b> 2016, 8 <br>&nbsp;  &emsp;(25), 16147-53.<br>
 
-12.&nbsp;	D. Ma; B. Li*; Z. Cui; K. Liu; <b>C. Chen</b>; G. Li; J. Hua; B. Ma; Z. Shi*; S. Feng, Multifunctional luminescent porous organic <br>&nbsp;  &emsp;polymer for selectively detecting iron ions and 1,4-dioxane via luminescent turn-off and turn-on sensing. <b>ACS Appl. Mater. <br>&nbsp;  &emsp;Interfaces</b> 2016, 8 (36), 24097-103.<br>
+12.&nbsp;	H. Huang; C. Li; S. Zhu; H. Wang; <b>C. Chen</b>; Z. Wang; T. Bai; Z. Shi*; S. Feng, Histidine-derived nontoxic nitrogen-doped <br>&nbsp;  &emsp;carbon dots for sensing and bioimaging applications. <b>Langmuir</b> 2014, 30 (45), 13542-8.<br>
 
-13.&nbsp;	Y. Lou; C. Li; X. Gao; T. Bai; <b>C. Chen</b>; H. Huang; C. Liang; Z. Shi*; S. Feng, Porous Pt nanotubes with high methanol <br>&nbsp;  &emsp;oxidation electrocatalytic activity based on original bamboo-Shaped Te nanotubes. <b>ACS Appl. Mater. Interfaces</b> 2016, 8 <br>&nbsp;  &emsp;(25), 16147-53.<br>
+13.&nbsp;	Y. Lou; W. Zhao; C. Li*; H. Huang; T. Bai; <b>C. Chen</b>; C. Liang; Z. Shi*; D. Zhang; X. Chen; S. Feng, Application of <br>&nbsp;  &emsp;Cu<sub>3</sub>InSnSe<sub>5</sub> heteronanostructures as counter electrodes for dye-sensitized solar cells. <b>ACS Appl. Mater. Interfaces</b> 2017, 9 <br>&nbsp;  &emsp;(21), 18046-53.<br>
 
-14.&nbsp;	H. Huang; C. Li; S. Zhu; H. Wang; <b>C. Chen</b>; Z. Wang; T. Bai; Z. Shi*; S. Feng, Histidine-derived nontoxic nitrogen-doped <br>&nbsp;  &emsp;carbon dots for sensing and bioimaging applications. <b>Langmuir</b> 2014, 30 (45), 13542-8.<br>
-
-15.&nbsp;	Y. Lou; W. Zhao; C. Li*; H. Huang; T. Bai; <b>C. Chen</b>; C. Liang; Z. Shi*; D. Zhang; X. Chen; S. Feng, Application of <br>&nbsp;  &emsp;Cu<sub>3</sub>InSnSe<sub>5</sub> heteronanostructures as counter electrodes for dye-sensitized solar cells. <b>ACS Appl. Mater. Interfaces</b> 2017, 9 <br>&nbsp;  &emsp;(21), 18046-53.<br>
-
-16.&nbsp;	T. Bai; C. Li; F. Li; L. Zhao; Z. Wang; H. Huang; <b>C. Chen</b>; Y. Han; Z. Shi*; S. Feng, A simple solution-phase approach to <br>&nbsp;  &emsp;synthesize high quality ternary AgInSe<sub>2</sub> and band gap tunable quaternary AgIn(S<sub>1-x</sub>Se<sub>x</sub>)<sub>2</sub> nanocrystals. <b>Nanoscale</b> 2014, 6 <br>&nbsp;  &emsp;(12), 6782-9.<br>
+14.&nbsp;	T. Bai; C. Li; F. Li; L. Zhao; Z. Wang; H. Huang; <b>C. Chen</b>; Y. Han; Z. Shi*; S. Feng, A simple solution-phase approach to <br>&nbsp;  &emsp;synthesize high quality ternary AgInSe<sub>2</sub> and band gap tunable quaternary AgIn(S<sub>1-x</sub>Se<sub>x</sub>)<sub>2</sub> nanocrystals. <b>Nanoscale</b> 2014, 6 <br>&nbsp;  &emsp;(12), 6782-9.<br>
 
 <br>
 </div>
