--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript">
 var u = navigator.userAgent;
-var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1;
+var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1 || u.match(/MicroMessenger/i) == "micromessenger";
 if (isAndroid){
     //<meta charset='utf-8' http-equiv="refresh" content="0.1;url=An.EN.html">
     location.href = "An.EN.html";
