--- a/resume.CN.html
+++ b/resume.CN.html
@@ -50,7 +50,7 @@ p
 </div>
 
 <div id='content' style='height:50px;width:800px;float:left;'>
-材料化学相关领域教学、科研工作<br>
+材料化学、纳米医学等相关领域的教学、科研工作<br>
 </div>
 
 
