--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 var u = navigator.userAgent;
 var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1 || u.match(/MicroMessenger/i) == "micromessenger";
 if (isAndroid){
-    print_r("hehe");
+    document.write("test");
 }
 else{
-	print_r("haha");
+	document.write("test1");
 }
 </script>
 
-<title>Resume</title>
+
 </head>
 
 </html>
