--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <script type="text/javascript">
 var u = navigator.userAgent;
-var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1 || u.match(/MicroMessenger/i) == "micromessenger";
+var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1 || u.toLowerCase().match(/MicroMessenger/i) == "micromessenger";
 if (isAndroid){
     document.write("test");
 }
