--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 var u = navigator.userAgent;
 var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1 || u.toLowerCase().match(/MicroMessenger/i) == "micromessenger";
 if (isAndroid){
-    document.write("test");
+    location.href = "An.EN.html";
 }
 else{
-	document.write("test1");
+    location.href = "resume.EN.html";
 }
 </script>
 
-
+<title>Resume</title>
 </head>
 
 </html>
