--- a/An.EN.html
+++ b/An.EN.html
@@ -7,7 +7,11 @@ var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终
 </script>
 
 
-<div style='width:8%;float:right;'>
+<div style='width:4%;float:right;'>
+<a href="chinese.pdf" download><font size='2';>download</font></a><br>
+</div>
+
+<div style='width:4%;float:right;'>
 <a href="An.CN.html"><font size='2';>简体中文</font></a><br>
 </div>
 
