--- a/resume.CN.html
+++ b/resume.CN.html
@@ -14,9 +14,15 @@ p
 <div id="container" style='width:1000px;padding:10; margin:0 auto; font-family:"Times New Roman";'>
 <br>
 
-<div style='width:50px;float:right;'>
+
+<div style='width:60px;float:right;'>
+<a href="chinese.pdf" download><font size='2';>简历下载</font></a><br>
+</div>
+
+<div style='width:85px;float:right;'>
 <a href="resume.EN.html" >English</a><br>
 </div>
+
 
 <div id='header' style='height:30px;>
 <font size='4';><b>基本情况:</b></font>
@@ -70,12 +76,13 @@ p
 <font size='4';><b>研究方向:</b></font>
 </div>
 
-<div id='content' style='height:170px;width:1040px;float:left;word-spacing:10px;line-height:150%;'>
+<div id='content' style='height:195px;width:1040px;float:left;word-spacing:10px;line-height:150%;'>
 主要从事稀土纳米材料的合成及其性质研究。研究的主要体系为稀土上转换氟化物和稀土钒酸盐纳米材料的合成、性质及包括生物成像治疗方面的应用研究。同时还参与了半导体纳米材料和MOFs的制备与性质研究。<br>
 <br>
  <b>☆ 微波辅助的水热与溶剂热等合成方法的研究。</b><br>
  <b>☆ 稀土纳米粒子的形貌表征及其在检测和生物成像领域的应用研究。</b><br>
- <b>☆ 半导体纳米材料和MOFs的合成及应用</b><br>
+ <b>☆ 纳米载药 ，疾病诊断、治疗等方面的应用研究。</b><br>
+ <b>☆ 半导体纳米材料和MOFs的合成及应用。</b><br>
 </div> 
  
 <div id="content" style='height:30px;width:800px;float:left;'>
