--- a/An.CN.html
+++ b/An.CN.html
@@ -1,5 +1,11 @@
 <html>
-<div style='width:8%;float:right;'>
+
+<div style='width:4%;float:right;'>
+<a href="chinese.pdf" download><font size='2';>简历下载</font></a><br>
+</div>
+
+
+<div style='width:4%;float:right;'>
 <a href="An.EN.html"><font size='2';>English</font></a><br>
 </div>
 
