--- a/resume.EN.html
+++ b/resume.EN.html
@@ -14,7 +14,12 @@ p
 <div id="container" style='width:900px;padding:10; font-size: 120%;margin:0 auto;font-family:"Times New Roman"'>
 <br>
 
-<div style='width:55px;float:right;'>
+
+<div style='width:65px;float:right;'>
+<a href="chinese.pdf" download><font size='3';>download</font></a><br>
+</div>
+
+<div style='width:85px;float:right;'>
 <a href="resume.CN.html"><font size='2';>简体中文</font></a><br>
 </div>
 
