--- a/An.CN.html
+++ b/An.CN.html
@@ -1,7 +1,7 @@
 <html>
 
 <div style='width:4%;float:right;'>
-<a href="chinese.pdf" download><font size='2';>简历下载</font></a><br>
+<a href="简历.pdf" download><font size='2';>简历下载</font></a><br>
 </div>
 
 
