--- a/An.EN.html
+++ b/An.EN.html
@@ -8,7 +8,7 @@ var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终
 
 
 <div style='width:4%;float:right;'>
-<a href="chinese.pdf" download><font size='2';>download</font></a><br>
+<a href="resume.pdf" download><font size='2';>download</font></a><br>
 </div>
 
 <div style='width:4%;float:right;'>
