--- a/resume.CN.html
+++ b/resume.CN.html
@@ -16,7 +16,7 @@ p
 
 
 <div style='width:60px;float:right;'>
-<a href="chinese.pdf" download><font size='2';>简历下载</font></a><br>
+<a href="简历.pdf" download><font size='2';>简历下载</font></a><br>
 </div>
 
 <div style='width:85px;float:right;'>
