--- a/resume.EN.html
+++ b/resume.EN.html
@@ -16,7 +16,7 @@ p
 
 
 <div style='width:65px;float:right;'>
-<a href="chinese.pdf" download><font size='3';>download</font></a><br>
+<a href="resume.pdf" download><font size='3';>download</font></a><br>
 </div>
 
 <div style='width:85px;float:right;'>
