--- a/An.CN.html
+++ b/An.CN.html
@@ -1,15 +1,10 @@
 <html>
 
-<div style='width:6%;float:right;'>
-<a href="简历.pdf" download><font size='2';>简历下载</font></a><br>
-</div>
-
-
-<div style='width:6%;float:right;'>
-<a href="An.EN.html"><font size='2';>English</font></a><br>
-</div>
-
-<img src="8.png">
+<img src="8-1.png" usemap="#map_new">
+<map name="map_new">
+    <area shape="rect" coords="930, 0, 1030, 40" href="简历.pdf" download>
+	<area shape="rect" coords="830, 0, 920, 40" href="An.EN.html">
+</map>
 <img src="9.png" usemap="#map1">
 <map name="map1">
     <area shape="rect" coords="760, 460, 860, 500" href="http://onlinelibrary.wiley.com/wol1/doi/10.1002/smll.201702305/abstract">
