--- a/An.EN.html
+++ b/An.EN.html
@@ -7,15 +7,12 @@ var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Adr') > -1; //android终
 </script>
 
 
-<div style='width:8%;float:right;'>
-<a href="resume.pdf" download><font size='2';>download</font></a><br>
-</div>
 
-<div style='width:6%;float:right;'>
-<a href="An.CN.html"><font size='2';>简体中文</font></a><br>
-</div>
-
-<img src="1.png">
+<img src="1-1.png" usemap="#map_new">
+<map name="map_new">
+    <area shape="rect" coords="830, 0, 930, 40" href="resume.pdf" download>
+	<area shape="rect" coords="740, 0, 820, 40" href="An.CN.html">
+</map>
 <img src="2.png">
 <img src="3.png">
 <img src="4.png" usemap="#map1">
