--- a/resume.EN.html
+++ b/resume.EN.html
@@ -61,7 +61,7 @@ Jilin University, Changchun 130012, P. R. China.
 
  
 <div id="content" style='height:30px;width:800px;float:left;'>
-<font size='4';><b>Honors and Award:</b></font>
+<font size='4';><b>Honors and Awards:</b></font>
 </div>
 
 <div id='content' style='height:285px;width:900px;float:left;line-height:170%;'>
@@ -78,7 +78,7 @@ Jilin University, Changchun 130012, P. R. China.
 
 
 <div id="content" style='height:30px;width:800px;float:left;'>
-<font size='4';><b>Research Interest:</b></font>
+<font size='4';><b>Research Interests:</b></font>
 </div>
 
 <div id='content' style='height:160px;width:1000px;float:left;line-height:170%;'>
